--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
+    "react-router-sitemap-generator": "0.0.8",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +40,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0"
+  }
 }
